--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
   transform: translate(-50%, -50%);
   box-shadow: 10px 10px #888888;
   background-color: lightgray;
-  padding: 30px 50px 50px 50px;
+  padding: 30px 50px 25px 50px;
 }
 
 .statusBar {
@@ -71,7 +71,7 @@
   color: white;
 }
 
-.popup {
+.popupPlayGame {
   position: fixed;
   top: 0;
   left: 0;
@@ -84,8 +84,24 @@
   flex-direction: column;
 }
 
-.button {
+.buttonPlayGame {
   width: 200px;
+  border-radius: 10px;
+  background-color: white;
+  height: 60px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.popup {
+  margin-top: 10px;
+}
+
+.button {
   border-radius: 10px;
   background-color: white;
   height: 60px;
